syntax = "proto3";

package pb;

option go_package = ".;pb";

message Discount {
  float pct = 1;
  int32 value_in_cents = 2;
}

message Product {
  string id = 1;
  int64 price_in_cents = 2;
  string title = 3;
  string descricao = 4;
  Discount discount = 5;
}

message Empty {}

message Request {
  string id = 1;
}

message Response {
  Product result = 1;
}

service ProductService {
  rpc GetByID(Request) returns (Response) {};
  rpc GetAll(Empty) returns (stream Response) {};
}