syntax = "proto3";

package protorepo;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  google.protobuf.Timestamp date_of_birth = 4;
}

message RequestUser {
  string id = 1;
}

service UserService {
  rpc GetByID(RequestUser) returns (User) {};
}